--- a/docs/sna_lecture_site.Rmd
+++ b/docs/sna_lecture_site.Rmd
@@ -23,6 +23,13 @@ opts_chunk$set(echo=FALSE,
 opts_knit$set(width=75)
 ```
 
+```{r links}
+net_url1 = "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/male-teacher_1f468-200d-1f3eb.png"
+net_url2 = "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/female-student_1f469-200d-1f393.png"
+net_url3 = "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/female-health-worker_1f469-200d-2695-fe0f.png"
+net_url4 = "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/male-scientist_1f468-200d-1f52c.png"
+```
+
 # Overview
 
 *write summary here*
@@ -57,12 +64,12 @@ By the end of this class meeting, students should be able to:
 
 You are all most likely familiar now with tabular data; rows and columns containing information. It looks like this:
 
-|Person|Name|Age|Widgits|
-|---|:---|:---|:--|
-|![](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/male-teacher_1f468-200d-1f3eb.png){width=10%}   | J  | 30 | 1 |
-|![](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/female-student_1f469-200d-1f393.png){width=10%}   | Y  | 21 | 3 |
-|![](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/female-health-worker_1f469-200d-2695-fe0f.png){width=10%}   | G  | 32 | 4 |
-|![](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/male-scientist_1f468-200d-1f52c.png){width=10%}   | Z  | 48 | 8 |
+| Person                               | Name | Age | Widgits |
+|--------------------------------------|:-----|:----|:--------|
+| ![](`r net_url1`){width="10%"} | J    | 30  | 1       |
+| ![](`r net_url2`){width="10%"} | Y    | 21  | 3       |
+| ![](`r net_url3`){width="10%"} | G    | 32  | 4       |
+| ![](`r net_url4`){width="10%"} | Z    | 48  | 8       |
 
 While this is a tidy way to store data, it artificially atomizes or separates many of the things we are interested in as researchers, social or otherwise. Network analysis is a tool to work with *relational* data. This is the information about how individuals are connected with each other. For example, the diagram below shows the same data as the table above, with the added benefit of showing how these individuals are connected to each other. Hover over the people to reveal the data about them.
 
@@ -70,10 +77,7 @@ While this is a tidy way to store data, it artificially atomizes or separates ma
 nodes = data.frame(id = 1:4, 
                     shape = "image",
                     title = c("<p style='color: black;'>Name: J<br>Age: 30<br>Widgits: 1</p>", "<p style='color: black;'>Name: Y<br>Age: 21<br>Widgits: 3</p>", "<p style='color: black;'>Name: G<br>Age: 32<br>Widgits: 4</p>", "<p style='color: black;'>Name: Z<br>Age: 48<br>Widgits: 8</p>"),
-                    image = c(
-              "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/male-teacher_1f468-200d-1f3eb.png",
-              "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/female-student_1f469-200d-1f393.png",                        "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/female-health-worker_1f469-200d-2695-fe0f.png",
-              "https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/male-scientist_1f468-200d-1f52c.png"))
+                    image = c(net_url1, net_url2, net_url3, net_url4))
 
 edges = data.frame(from = c(2,4,3,3), to = c(1,2,4,2), label = c("Siblings", "Student", "Friends", "Parent"))
 
@@ -88,7 +92,7 @@ Rather than looking only at attributes of specific data points, we are looking a
 
 ## Networks in research - Social Sciences
 
-```{r echo=FALSE, out.width='100%'}
+```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/who_shall_survive.png?token=AGC2JV4HE32MDLP2HRWG67DABC6XA")
 ```
 
@@ -96,7 +100,7 @@ One of the first instances of social network analysis was originally published i
 
 ## Networks in research - Neuroscience
 
-```{r echo=FALSE, out.width='100%'}
+```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/neuronet.jpg?token=AGC2JV3IQGC4XW4F4UNPOUDABC6X4")
 ```
 
@@ -104,7 +108,7 @@ Neuroscientists use networks to study the brain, given their ready application t
 
 ## Networks in research - Chemistry
 
-```{r echo=FALSE, out.width='100%'}
+```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/chem_graph.jpg?token=AGC2JV43VML6CWQRQ3X2P6TABC6YQ")
 ```
 
@@ -112,7 +116,7 @@ Chemistry was quick to see the applications of networks. As early at 1985 papers
 
 ## Networks in research - The Internet
 
-```{r echo=FALSE, out.width='100%'}
+```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/page_rank.jpg?token=AGC2JV2B3KWCXB2B6KGKP3LABC6ZI")
 ```
 
@@ -120,11 +124,11 @@ The internet is a network! Beyond the various social network sites, servers them
 
 ## Networks in research - Infrastructure
 
-```{r echo=FALSE, out.width='100%'}
+```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/infrastructure_net.jpg?token=AGC2JVZCZ4EMYKSZK5ZOSUDABC62A")
 ```
 
-@fanGraphbasedMethodSocial2019
+[@fanGraphbasedMethodSocial2019]
 
 ???
 
@@ -132,11 +136,11 @@ Governments and utilities use social network data to try and find where infrastr
 
 ## Networks in research - Security
 
-```{r echo=FALSE, out.width='100%'}
+```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/terror_net.png?token=AGC2JV5PUJBSL2QWAG2WK73ABC62U")
 ```
 
-@krebsMappingNetworksTerrorist2002
+[@krebsMappingNetworksTerrorist2002]
 
 ???
 
